fixed some z-index

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -18,7 +18,7 @@ main {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 90;
+  z-index: 85;
   min-width: 100%;
   height: 60px;
   background-color: white;
