--- a/src/app/user/sign-in/sign-in-modal/sign-in-modal.component.css
+++ b/src/app/user/sign-in/sign-in-modal/sign-in-modal.component.css
@@ -12,7 +12,7 @@ main {
   justify-content: center;
   align-items: center;
   animation: fadeIn 0.5s;
-  z-index: 20;
+  z-index: 90;
 }
 
 .backdrop {
@@ -21,7 +21,7 @@ main {
   left: 0;
   min-width: 100%;
   min-height: 100%;
-  z-index: 25;
+  z-index: 95;
 }
 
 .content-wrapper {
@@ -33,5 +33,5 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 30;
+  z-index: 99;
 }
